Subscriptions update dedicated service, plus minor refactoring