@@ -3,25 +3,14 @@ package com.github.engatec.vdl.core;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.github.engatec.vdl.core.preferences.ConfigRegistry;
-import com.github.engatec.vdl.model.QueueItem;
 import com.github.engatec.vdl.model.Subscription;
 import com.github.engatec.vdl.model.VideoInfo;
-import com.github.engatec.vdl.model.downloadable.BaseDownloadable;
-import com.github.engatec.vdl.model.preferences.general.AutoSelectFormatConfigItem;
-import com.github.engatec.vdl.model.preferences.wrapper.general.AutoSelectFormatPref;
-import com.github.engatec.vdl.util.YouDlUtils;
-import com.github.engatec.vdl.worker.service.PlaylistDetailsSearchService;
-import javafx.application.Platform;
+import com.github.engatec.vdl.worker.service.SubscriptionsUpdateService;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -41,7 +30,7 @@ public class SubscriptionsManager {
     }
 
     public List<Subscription> getSubscriptions() {
-        return Collections.unmodifiableList(subscriptions);
+        return List.copyOf(subscriptions);
     }
 
     public void subscribe(Subscription s) {
@@ -76,50 +65,22 @@ public class SubscriptionsManager {
         }
     }
 
-    public void checkForUpdates(Subscription subscription) {
-        var playlistSearchService = new PlaylistDetailsSearchService(AppExecutors.SYSTEM_EXECUTOR);
-        playlistSearchService.setUrl(subscription.getUrl());
-        playlistSearchService.setOnSucceeded(e -> updateSubscription(subscription, (List<VideoInfo>) e.getSource().getValue()));
-        playlistSearchService.setOnFailed(e -> LOGGER.error(e.getSource().getException().getMessage()));
-        playlistSearchService.start();
+    public void updateSubscription(Subscription subscription) {
+        doSubscriptionsUpdate(List.of(subscription));
     }
 
-    public void massCheckForUpdates() {
-        for (Subscription subscription : subscriptions) {
-            checkForUpdates(subscription);
-        }
+    public void updateAllSubscriptions() {
+        doSubscriptionsUpdate(List.copyOf(subscriptions));
     }
 
-    private void updateSubscription(Subscription subscription, List<VideoInfo> playlistItems) {
-        if (CollectionUtils.isEmpty(playlistItems)) {
-            LOGGER.warn("No videos found for subscription '{}'", subscription.getName());
+    private void doSubscriptionsUpdate(List<Subscription> subscriptions) {
+        if (CollectionUtils.isEmpty(subscriptions)) {
             return;
         }
-
-        Set<String> processedItems = subscription.getProcessedItems();
-        List<VideoInfo> newItems = playlistItems.stream()
-                .filter(Predicate.not(it -> processedItems.contains(getPlaylistItemId(it))))
-                .collect(Collectors.toList());
-
-        Integer selectedVideoHeight = ConfigRegistry.get(AutoSelectFormatPref.class).getValue();
-        selectedVideoHeight = AutoSelectFormatConfigItem.DEFAULT.equals(selectedVideoHeight) ? null : selectedVideoHeight;
-
-        for (VideoInfo vi : newItems) {
-            String formatId = YouDlUtils.createFormatByHeight(selectedVideoHeight);
-
-            var downloadable = new BaseDownloadable();
-            downloadable.setBaseUrl(vi.getBaseUrl());
-            downloadable.setTitle(vi.getTitle());
-            downloadable.setFormatId(formatId);
-            downloadable.setDownloadPath(Path.of(subscription.getPath()));
-
-            Platform.runLater(() -> QueueManager.INSTANCE.addItem(new QueueItem(downloadable)));
-
-            processedItems.add(getPlaylistItemId(vi));
-        }
+        new SubscriptionsUpdateService(subscriptions).start();
     }
 
-    public String getPlaylistItemId(VideoInfo item) {
+    public String buildPlaylistItemId(VideoInfo item) {
         return StringUtils.firstNonBlank(item.getId(), item.getUrl(), item.getTitle());
     }
 }
